Replaced calls to Long constructor.