@@ -494,7 +494,7 @@ public class JSONTokener {
                 return new Integer(s);
             } catch (Exception e) {
                 try {
-                    return new Long(s);
+                    return Long.valueOf(s);
                 } catch (Exception f) {
                     try {
                         return Double.valueOf(s);
